--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: deploy-container
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "packages/container/**"
 
@@ -25,5 +25,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          AWS_DEFAULT_REGION: us-east-1
+          AWS_DEFAULT_REGION: us-east-1
           AWS_EC2_METADATA_DISABLED: true
